connect Add db에 이미지 넣기, 상세화면, 새 메모 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,4 +29,10 @@
         </activity>
     </application>
 
+    // 갤러리에서 꺼내와야 하므로 외부저장소 권한이 필요하다.
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+
+
 </manifest>
