--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.example.hyunndy_notepad"
+        applicationId "com.example.hyunndyNotepad"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
