--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hyunndy_notepad">
+    package="com.example.hyunndyNotepad">
 
     <application
         android:allowBackup="false"
@@ -10,15 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".DetailMemoActvity"
+            android:name="com.example.hyunndyNotepad.DetailMemoActvity"
             android:label="@string/title_activity_detail_memo_actvity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".NewMemoActivity"
+            android:name="com.example.hyunndyNotepad.NewMemoActivity"
             android:label="Hyunndy_Newmemo"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.hyunndyNotepad.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -29,7 +29,7 @@
         </activity>
         
         <provider
-            android:authorities="com.example.hyunndy_notepad.file_provider"
+            android:authorities="com.example.hyunndyNotepad.file_provider"
             android:name="androidx.core.content.FileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
